WIP: Adapt ComponentHelper for MC6